# axioma-audit

./: .gitignore  BUILD-MANIFEST.md  CMakeLists.txt  README.md  ax-phase1-audit.sh  ax-rtm-verify.py
include/axilog/: audit.h
src/: commitment.c  ledger.c  sha256.c  sha256_internal.h
tests/identity/: test_commitment.c  test_ledger.c
